--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<div v-for="item in items" class="item">
 			<div class="main-info">
-				<img v-bind:src="item.photo" class="photo"></img>
+				<img v-bind:src="item.photo" class="photo">
 				<div class="name">{{ item.name }}</div>
 			</div>
 			<div class="camera">{{ item.cam }}</div>
